--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url(/assets/ctc-illustration-after.jpg);
+    background-image: url(../assets/ctc-illustration-after.jpg);
     background-position: center center;
     background-size: cover;
     overflow: hidden;
@@ -29,7 +29,7 @@
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-image: url(/assets/ctc-illustration-before.jpg);
+    background-image: url(../assets/ctc-illustration-before.jpg);
     background-position: center center;
     background-size: cover;
 }
