--- a/styles/style.css
+++ b/styles/style.css
@@ -48,11 +48,28 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #fff;
+    background: #fff;
     border: 3px solid #000;
     top: 50%;
     margin-top: -25px;
     left: 50%;
     margin-left: -25px;
-    cursor: ew-resize;
+    cursor: move;
+    cursor: grab;
+    cursor: -moz-grab;
+    cursor: -webkit-grab;}
+
+.circle:active {
+    cursor: grabbing;
+    cursor: -moz-grabbing;
+    cursor: -webkit-grabbing;
+ }
+
+.circle svg {
+  display: block;
+  margin: auto;
+  position: absolute;
+  top: 75%;
+  left: 75%;
+  transform: translate(-50%, -50%);
 }
