--- a/styles/style.css
+++ b/styles/style.css
@@ -253,7 +253,8 @@ a {
     border-bottom: 50px solid transparent;
     border-left: 50px solid #4F55C2;
     position: absolute;
-    top: 90%;
+    margin-top: 200px;
+    /* bottom: 0px; */
     z-index: 3;
     -webkit-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
