--- a/styles/style.css
+++ b/styles/style.css
@@ -2,13 +2,17 @@ header {
     display: flex;
     align-items: center;
     width: 100%;
-    box-shadow:0px 4px 4px #00000025;    
+    box-shadow:0px 4px 4px #00000040;    
     height: 5.5em;
     font-size: 1rem;
     position: sticky;
     top: 0;
     background-color: #ffffff;
     z-index: 999;
+}
+
+header button{
+margin: 0 20px 0 20px;
 }
 
 * {
@@ -34,6 +38,10 @@ h2 {
     font-size: 2em;
 }
 
+h3 {
+    font-size: 1.5em;
+}
+
 a, p{
     font-family: "Roboto", sans-serif;
     font-size: 1em;
@@ -53,12 +61,10 @@ a {
     flex-direction: row;
     list-style-type: none;
     align-items: center;
-    white-space: nowrap;
-    overflow: hidden;
 }
 
-.nav-menu ul li{
-    padding: 10px;
+.nav-menu-language li{
+    padding: 0.5em;
 }
 
 .nav-item:hover{
@@ -67,29 +73,29 @@ a {
 
 .nav-item:before {
     content: "[ ";
-  }
+}
   
-  .nav-item:after {
+.nav-item:after {
     content: " ]";
-  }
+}
   
-  .nav-item:before,
-  .nav-item:after {
+.nav-item:before,
+.nav-item:after {
     position: relative;
     top: 2px;
     font-size: 1.5em;
     opacity: 0;
     color: #000000;
     transition: all .5s;
-  }
+}
   
-  .nav-item:hover:before,
-  .nav-item:hover:after {
+.nav-item:hover:before,
+.nav-item:hover:after {
     opacity: 0.7;
-  }
+}
   
 .logo-wrapper img {
-    width: 11em;
+    width: 9em;
     height: auto;
 }
 
@@ -106,25 +112,42 @@ a {
     align-items: center;
 }
 
-.btn-primary {
+button {
     font-family: "Roboto", sans-serif;
     font-size: 1em;
     font-weight: 300;
     padding: 0.8rem 1.6rem;
-    margin: auto 1.25em;
     border-radius: 2rem;
     border: none;
     color: #fff;
     background-size: 400%;
-    background-image: linear-gradient(60deg, #524DD0, #84389E, #cf58f7, #84389E, #524DD0);
     transition: 0.2s ease-in;
     cursor: pointer;
+    box-shadow:0px 4px 4px #00000040;    
 }
 
-.btn-primary:hover {
+.btn-primary {
+    
+    background-image: linear-gradient(60deg, #524DD0, #84389E, #cf58f7, #84389E, #524DD0);
+    
+}
+
+.btn-secondary {
+    border: 1px solid #00ffec;
+    color: #00ffec;
+    background: transparent;
+}
+
+.btn-primary:hover, .btn-secondary:hover {
     background-position: right center;
-    transform: scale(1.05);
+    transform: scale(1.05); 
     opacity: 0.9;
+}
+
+.btn-secondary:hover {
+    background-color: #00ffec;
+    border: none;
+    color: #101737;
 }
 
 .hero {
@@ -136,7 +159,7 @@ a {
 .hero-container{
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: 16px;
+    grid-column-gap: 1em;
     width: 71.25em;
     margin: auto;
     list-style-type: none;
@@ -160,7 +183,7 @@ a {
     display: block;
     margin-left: auto;
     margin-top: 50px;
-    box-shadow:-30px 30px 0px #4f55c250;
+    box-shadow:-30px 30px 0px #524dd050;
 }
 
 .hero-container > h1 {
@@ -175,9 +198,7 @@ a {
 .hero-container button {
     grid-column: 1 / 4;
     width: 130px;
-    margin: 20px 0;
-    margin-top: 40px;
-    margin-bottom: 50px;
+    margin: 40px 0;
 }
 
 .ocean { 
@@ -186,11 +207,10 @@ a {
     position:absolute;
     bottom:-50px;
     left:0;
-    z-index: -1;
-    
-  }
+    z-index: -1;    
+}
   
-  .wave {
+.wave {
     background: url(../assets/wavy.svg) repeat-x; 
     position: absolute;
     top: -198px;
@@ -198,44 +218,44 @@ a {
     height: 198px;
     animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
     transform: translate3d(0, 0, 0);
-  }
+}
   
-  .wave:nth-of-type(2) {
+.wave:nth-of-type(2) {
     top: -175px;
     animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
     opacity: 1;
-  }
+}
   
-  @keyframes wave {
+@keyframes wave {
     0% {
-      margin-left: 0;
+        margin-left: 0;
     }
     100% {
-      margin-left: -1600px;
+        margin-left: -1600px;
     }
-  }
+}
   
-  @keyframes swell {
+@keyframes swell {
     0%, 100% {
-      transform: translate3d(0,-25px,0);
+        transform: translate3d(0,-25px,0);
     }
     50% {
-      transform: translate3d(0,5px,0);
+        transform: translate3d(0,5px,0);
     }
-  }
+}
 
-.hoewerkthet {
+.hoeWerktHet {
     display: flex;
     flex-direction: column;
     margin: auto;
-    padding-top: 30px;
+    padding-top: 1.875em;
     align-items: center;
     text-align: center;
     background-color: #4F55C2;
 }
 
-.hoewerkthet > h2, .hoewerkthet p {
-    color: #fff;
+.hoeWerktHet > h2, .hoeWerktHet p {
+    color: #ffffff;
     margin: 10px;
 }
 
@@ -244,17 +264,16 @@ a {
     padding-bottom: 35px;
 }
 
-.hoewerkthet::after {
+.hoeWerktHet::after {
     content: " ";
     display: block;
     width: 0;
     height: 0;
     border-top: 50px solid transparent;
     border-bottom: 50px solid transparent;
-    border-left: 50px solid #4F55C2;
+    border-left: 50px solid #524dd0;
     position: absolute;
     margin-top: 200px;
-    /* bottom: 0px; */
     z-index: 3;
     -webkit-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
@@ -335,20 +354,270 @@ a {
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-bottom: 30px;
-    padding-top: 30px;
+    margin-bottom: 1.875em;
+    padding-top: 1.875em;
     align-items: center;
     text-align: center;
-    background-image: linear-gradient(#4f55c2 65%, #ffffff 35%);
+    background-image: linear-gradient(#524dd0 65%, #ffffff 35%);
+    color: #ffffff;
 }
 
-.onzemissie > h2, .onzemissie > h3, .onzemissie p {
+.onzemissie h2, .onzemissie h3, .onzemissie p {
     color: #fff;
-    margin: 10px;
+    margin: 8px;
 }
 
 video {
     width: 71.25em;
-    box-shadow:0px 4px 4px #00000025; 
-    margin-top: 30px;   
+    box-shadow:0px 4px 4px #00000040; 
+    margin-top: 1.875em;   
 }
+
+.services {
+    text-align: center;
+    padding-top: 1.875em;
+}
+
+.services h2, .services p{
+    margin-bottom: 20px;
+}
+
+.services-articles {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 1em;
+    width: 71.25em;
+    margin:auto;
+}
+
+.services-articles article {
+    max-width: 22em;
+    margin: auto;
+}
+
+.services-articles img {
+    margin: 15px 0;
+}
+
+.useCases {
+    margin-top: 70px;
+    text-align: center;
+    background-image: linear-gradient(#ffffff 18%, #f7f7f7 18% 90%, #ffffff 90%);
+}
+
+.useCasesContainer {
+    padding-top: 30px;
+    width: 947px;
+    margin:auto;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.useCasesContainer h3{
+    color: #fff;
+    margin: 40px 0 0 40px;
+}
+
+.useCase1 p, .useCase3 p {
+    color: #fff;
+    margin: 15px 0 0 40px;
+    padding-right: 40px;
+}
+
+.useCase2 p, .useCase4 p {
+    color: #fff;
+    margin: 15px 0 0 40px;
+    padding-right: 40px;
+}
+
+.useCases span {
+    color: #00ffec;
+}
+
+.useCase1 img, .useCase3 img {
+    position: relative;
+    margin: 40px -230px 40px 0;
+    width: 368px;
+    box-shadow:0 4px 4px #00000040; 
+}
+
+.useCase2 img, .useCase4 img {
+    position: relative;
+    margin: 40px 0 40px -230px;
+    width: 368px;
+    height: auto;
+    box-shadow:0 4px 4px #00000040; 
+}
+
+.useCases button {
+    margin: 40px 0 0 40px;
+}
+
+.useCase1, .useCase3 {
+    display: flex;
+    position: relative;
+    left: 80px;
+}
+
+.useCase1Content, .useCase3Content{
+    background-color: #524DD0;
+    padding-left: 230px;
+}
+
+.useCase2, .useCase4 {
+    display: flex;
+    position: relative;
+    right: 80px;
+}
+
+.useCase2Content, .useCase4Content{
+    background-color: #524DD0;
+    padding-right: 230px;
+}
+
+.ourStory {
+    text-align: center;
+}
+
+
+
+
+
+
+
+footer {
+    margin-top: 60px;
+    /* font-size: 18px; */
+    /* line-height: 24px; */
+    color: #FFFFFF;
+    background-color: #101737;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 404px;
+  }
+  
+footer h2, footer p {
+    color: #ffffff;
+}
+
+.logos {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+  .wrapper{
+    display: inline-flex;
+  }
+  
+  .wrapper .icon{
+    margin: 0 8px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    z-index: 2;
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  
+  .wrapper .icon span{
+    display: block;
+    height: 50px;
+    width: 50px;
+    background: #fff;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  
+  .wrapper .icon span i{
+    line-height: 50px;
+    font-size: 25px;
+  }
+  
+  .wrapper .icon .tooltip{
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    background: #fff;
+    padding: 10px 18px;
+    font-size: 18px;
+    border-radius: 25px;
+    opacity: 0;
+    pointer-events: none;
+    box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  
+  .wrapper .icon:hover .tooltip{
+    top: -70px;
+    opacity: 1;
+    pointer-events: auto;
+  }
+  
+  .icon .tooltip:before{
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    background: #FFFFFF;
+    left: 50%;
+    bottom: -6px;
+    transform: translateX(-50%) rotate(45deg);
+    transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  
+  .wrapper .instagram span{
+    color: #E1306C;
+  }
+  
+  .wrapper .youtube span{
+    color: #E62117
+  }
+  
+  .wrapper .linkedin span{
+    color: #0077B5
+  }
+  
+  .wrapper .instagram:hover span {
+    background: linear-gradient(45deg, #F09433, #E6683C, #DC2743, #CC2366, #BC1888);
+    color: #FFFFFF;
+  }
+  
+  .wrapper .youtube:hover span{
+    background: #E62117;
+    color: #FFFFFF
+  }
+  
+  .wrapper .linkedin:hover span{
+    background: #0077B5;
+    color: #FFFFFF
+  }
+  
+  .wrapper .instagram:hover .tooltip,
+  .wrapper .instagram:hover .tooltip:before{
+    color: #E1306C;
+  }
+ 
+  .wrapper .youtube:hover .tooltip,
+  .wrapper .youtube:hover .tooltip:before{
+    color: #E62117;
+  }
+  
+  .wrapper .linkedin:hover .tooltip,
+  .wrapper .linkedin:hover .tooltip:before{
+    color: #0077B5;
+  }
+
+
